TheNewConfigLibrary 0.1.1.25